Dodate klase sa atributima